--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Html Template</title>
     <link
       rel="shortcut icon"
-      href="./assets/img/favicons/64x64.png"
+      href="assets/images/favicons/64x64.png"
       type="image/x-icon"
     />
     <!-- For bootstrap -->
