--- a/01. Navigation-bootstrap/index.html
+++ b/01. Navigation-bootstrap/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="display-1 p-2">Test</h1>
+    <h1 class="display-1 p-2">New folder</h1>
 
     <!-- For bootstrap -->
     <script
