--- a/01. Navigation-bootstrap/index.html
+++ b/01. Navigation-bootstrap/index.html
@@ -10,6 +10,11 @@
       href="assets/images/favicons/64x64.png"
       type="image/x-icon"
     />
+    <!-- For bootstrap icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
+    />
     <!-- For bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -20,7 +25,93 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="display-1 p-2">New folder</h1>
+    <div class="row min-vh-100">
+      <div class="container-fluid d-flex">
+        <!-- Sidebar -->
+        <div class="section__navigation col bg-dark collapsed">
+          <nav class="d-flex flex-column navbar-dark pt-4 d-flex flex-column">
+            <div class="d-flex navigation__logo--box m-auto mb-4 text-danger">
+              <a
+                class="navigation__logo--text navbar-brand d-inline-block m-auto text-light"
+                href="#"
+              >
+                <i class="bi bi-dice-5" role="img" aria-label="dice-5"></i>
+                <span class="ms-2 d-none">Logo</span></a
+              >
+            </div>
+            <ul
+              class="navbar-nav d-flex flex-column justify-content-center align-items-center"
+            >
+              <li class="nav-item h3">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-house-door"></i>
+                  <span class="ms-2 d-none">Home</span></a
+                >
+              </li>
+              <li class="nav-item h3">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-folder2-open"></i>
+                  <span class="ms-2 d-none">Project</span></a
+                >
+              </li>
+              <li class="nav-item h3 mt-5">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-speedometer2"></i>
+                  <span class="ms-2 d-none">Dashboard</span></a
+                >
+              </li>
+              <li class="nav-item h3">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-table"></i>
+                  <span class="ms-2 d-none">Orders</span></a
+                >
+              </li>
+              <li class="nav-item h3">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-grid"></i>
+                  <span class="ms-2 d-none">Products</span></a
+                >
+              </li>
+              <li class="nav-item h3">
+                <a class="nav-link" href="#">
+                  <i class="bi bi-person-circle"></i>
+                  <span class="ms-2 d-none">Costumers</span></a
+                >
+                <!-- <span class="none">Costumers</span></a> -->
+              </li>
+              <li class="nav-item h3 mt-5">
+                <a class="nav-link" href="#" type="button">
+                  <i class="bi bi-chevron-double-left"></i>
+                  <span class="ms-2 d-none">Collapse</span></a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <!-- <ul class="nav flex-column bg-info nav-pills nav-fill">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Active</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul> -->
+
+        <!--  Main -->
+        <div class="section__main col bg-info">
+          <h2 class="display-2 ps-4 pt-4">Main</h2>
+        </div>
+      </div>
+    </div>
 
     <!-- For bootstrap -->
     <script
