add responsive sidebar

--- a/01. Navigation-bootstrap/index.html
+++ b/01. Navigation-bootstrap/index.html
@@ -40,7 +40,7 @@
               >
             </div>
             <ul
-              class="navigation__box navbar-nav d-flex flex-column justify-content-center ms-4"
+              class="navigation__box navbar-nav d-flex flex-column justify-content-center"
             >
               <li class="nav-item h3">
                 <a class="nav-link" href="#">
